2010-10-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSObjCRuntime.m: Add support for arbitrary struct
	get/set since OSX has it at last (not just well-known structs).
 
2010-10-12 David Chisnall <theraven@gna.org>

	* Source/Additions/GSObjCRuntime.m: 
	Add special case to KVC accessors for libobjc2: If there is a method
	with the wrong types, try calling the method with the correct types.
	This enables the TDD-fixup code to run and generate a KVC-compliant
	version of an existing method.

2010-10-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURL.m: Exactly match the percent escaping used by OSX.

2010-10-08  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/GSAvahiRunLoopIntegration.m: Fix some bugs:
	 - Remove an extra retain of the NSTimer which was leaking memory.
	 - When passed a NULL struct timeval * from avahi, invalidate
	 the timer and don't schedule a new one.

2010-10-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPredicate.m: Add simple implementation of
	evalutedObjectExpression

2010-10-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSObjCRuntime.m: Revert to the working version
	from the last release.
	Can't see a changelog for the last change, I guess some local
	hack was accidentally committed... it broke KVC, which showed up
	when the testsuite was run.

2010-10-01  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GNUmakefile: Remove reference to non-existent behavior.h
        * Source/Makefile.postamble: Don't make circular dependency on
        common.h

2010-10-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSSocketStream.m:
	* Source/NSSocketPort.m:
	* Source/NSMessagePort.m:
	* Source/win32/GSFileHandle.m:
	* Source/GSNetwork.h:
	* Source/GSFileHandle.m:
	Standardise the backlog parameter to listen() calls.

2010-10-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURL.m: Fix for bug #31153 ... allow hash in path when
	initialising.